--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="assets/css/flaticon.min.css">
     <link rel="preload" as="image" href="./assets/images/hero-banner.jpg">
+
+    <!--<div style="display: none;">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div><div>Icons made by <a href="https://www.flaticon.com/authors/surang" title="surang">surang</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div><div>Icons made by <a href="https://www.flaticon.com/authors/darius-dan" title="Darius Dan">Darius Dan</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div><div>Icons made by <a href="https://www.flaticon.com/authors/ria-fitriana" title="Ria Fitriana">Ria Fitriana</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
 </head>
 <body id="top">
     <header class="header">
@@ -117,8 +119,153 @@
 
     <main>
         <article>
-            <section class="section hero has-before has-bg-image" id="home" aria-label="home">
-                
+            <section class="section hero has-before has-bg-image" id="home" aria-label="home" style="background-image: url(./assets/images/hero-banner.jpg);">
+
+                <h1 class="h1 hero-title">Maribe Barbers & Hair Cutting</h1>
+
+                <p class="hero-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum sint nihil ex itaque corporis voluptates maxime expedita nesciunt repellendus velit, illum iusto corrupti amet, ea labore saepe quam, explicabo veritatis!
+                </p>
+
+                <a href="#" class="btn has-before">
+                    <span class="span">Exlore Our Services</span>
+
+                    <ion-icon name="arrow-forward"></ion-icon>
+                </a>
+            </section>
+
+
+            <section class="section service" id="services" aria-label="services">
+                <div class="container">
+
+                    <h2 class="h2 section-title text-center">Services We Provide</h2>
+
+                    <p class="section-text text-center">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium culpa ipsum, repudiandae veritatis in explicabo nemo. Ipsum, id. Eveniet veniam commodi atque? Id fugiat quidem dolorem est nemo incidunt perferendis.
+                    </p>
+
+                    <ul class="grid-list">
+
+                        <li>
+                            <div class="service-card">
+
+                                <div class="card-icon">
+                                    <img src="./assets/mycollection/png/001-barber.png" alt="">
+                                </div>
+
+                                <h3 class="h3">
+                                    <a href="#" class="card-title">Hair Cutting Style</a>
+                                </h3>
+
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus nam vel optio beatae architecto aliquam debitis vitae, commodi, ipsum temporibus deleniti sunt! Magnam recusandae iusto possimus! Suscipit consequatur quos quam?</p>
+
+                                <a href="#" class="card-btn" aria-label="more">
+                                    <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+                                </a>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="service-card">
+
+                                <div class="card-icon">
+                                    <img src="./assets/mycollection/png/002-barber-1.png" alt="">
+                                </div>
+
+                                <h3 class="h3">
+                                    <a href="#" class="card-title">Hair Washing</a>
+                                </h3>
+
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus nam vel optio beatae architecto aliquam debitis vitae, commodi, ipsum temporibus deleniti sunt! Magnam recusandae iusto possimus! Suscipit consequatur quos quam?</p>
+
+                                <a href="#" class="card-btn" aria-label="more">
+                                    <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+                                </a>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="service-card">
+
+                                <div class="card-icon">
+                                    <img src="./assets/mycollection/png/004-massage.png" alt="">
+                                </div>
+
+                                <h3 class="h3">
+                                    <a href="#" class="card-title">Body Treatments</a>
+                                </h3>
+
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus nam vel optio beatae architecto aliquam debitis vitae, commodi, ipsum temporibus deleniti sunt! Magnam recusandae iusto possimus! Suscipit consequatur quos quam?</p>
+
+                                <a href="#" class="card-btn" aria-label="more">
+                                    <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+                                </a>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="service-card">
+
+                                <div class="card-icon">
+                                    <img src="./assets/mycollection/png/003-shampoo.png" alt="">
+                                </div>
+
+                                <h3 class="h3">
+                                    <a href="#" class="card-title">Beauty & Spa</a>
+                                </h3>
+
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus nam vel optio beatae architecto aliquam debitis vitae, commodi, ipsum temporibus deleniti sunt! Magnam recusandae iusto possimus! Suscipit consequatur quos quam?</p>
+
+                                <a href="#" class="card-btn" aria-label="more">
+                                    <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+                                </a>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="service-card">
+
+                                <div class="card-icon">
+                                    <img src="./assets/mycollection/png/005-skin-care.png" alt="">
+                                </div>
+
+                                <h3 class="h3">
+                                    <a href="#" class="card-title">Stylist Shaving</a>
+                                </h3>
+
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus nam vel optio beatae architecto aliquam debitis vitae, commodi, ipsum temporibus deleniti sunt! Magnam recusandae iusto possimus! Suscipit consequatur quos quam?</p>
+
+                                <a href="#" class="card-btn" aria-label="more">
+                                    <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+                                </a>
+                            </div>
+                        </li> 
+
+                        <li>
+                            <div class="service-card">
+
+                                <div class="card-icon">
+                                    <img src="./assets/mycollection/png/006-hairdresser-applying-hair-dye-to-a-client-of-hair-salon.png" alt="">
+                                </div>
+
+                                <h3 class="h3">
+                                    <a href="#" class="card-title">Multi Hair Colors</a>
+                                </h3>
+
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus nam vel optio beatae architecto aliquam debitis vitae, commodi, ipsum temporibus deleniti sunt! Magnam recusandae iusto possimus! Suscipit consequatur quos quam?</p>
+
+                                <a href="#" class="card-btn" aria-label="more">
+                                    <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+                                </a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+
+            <section class="section pricing has-bg-image has-before" id="pricing" aria-label="pricing">
+                   
             </section>
         </article>
     </main>
