--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Hedvig+Letters+Serif:opsz@12..24&family=League+Spartan:wght@100;200;300;400;500;600;800;900&family=Lora:ital@1&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&family=Nunito:wght@200;300;400;600;700&family=Orbitron:wght@400;500&family=Oswald:wght@700&family=Poppins:wght@400;500;600&family=Roboto+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&family=Roboto:ital,wght@0,300;0,400;0,500;1,300&display=swap" rel="stylesheet">
 
+
+    
+
     <!--<div style="display: none;">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div><div>Icons made by <a href="https://www.flaticon.com/authors/surang" title="surang">surang</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div><div>Icons made by <a href="https://www.flaticon.com/authors/darius-dan" title="Darius Dan">Darius Dan</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div><div>Icons made by <a href="https://www.flaticon.com/authors/ria-fitriana" title="Ria Fitriana">Ria Fitriana</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
 </head>
 <body id="top">
@@ -846,10 +849,14 @@
         </div>
     </footer>
    
-
+<!--
     <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>
-        <ion-icon name="arrow-up"></ion-icon>
-    </a>
+        <ion-icon name="arrow-up"></ion-icon> 
+    </a> -->
+
+        <a href="https://wa.me/+254708167366/" class="float" target="_blank">
+            <ion-icon name="logo-whatsapp"></ion-icon>
+        </a>
 
 
     <script src="./assets/js/script.js" defer></script>
